PyQuest/src/test/semantic_analysis/valid/test020.ql
// Complex condition with mixed types
form testForm {
	if ((15.5 >= 15) && ((3.0 * 3) - 15 > -10 / 2)) {
		"First Question"
		someIdentifier : integer
	}
}