PyQuest/src/test/semantic_analysis/invalid/test023.ql
// Incompatible result type for greater than operation 
form testForm {
	"First Question"
	someIdentifier : integer = 10.0 > 10
}